kubernetes/fsn1/apps/flux-system/flux-operator/instance/webhooks/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  hostnames:
    - "webhook-receiver-flux-fsn1.stanleygrange.uk"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
